--- a/001_Basics.ipynb
+++ b/001_Basics.ipynb
@@ -2901,32 +2901,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 170,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\JIMOH\\AppData\\Local\\Temp\\ipykernel_15612\\2998358590.py:8: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
-      "  men = Men[Heights == 1]\n",
-      "C:\\Users\\JIMOH\\AppData\\Local\\Temp\\ipykernel_15612\\2998358590.py:9: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
-      "  men2 = Men[Weights == 1]\n",
-      "C:\\Users\\JIMOH\\AppData\\Local\\Temp\\ipykernel_15612\\2998358590.py:10: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
-      "  women = Women[Heights == 1]\n",
-      "C:\\Users\\JIMOH\\AppData\\Local\\Temp\\ipykernel_15612\\2998358590.py:11: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
-      "  women2 = Women[Weights == 1]\n"
+      "C:\\Users\\JIMOH\\AppData\\Local\\Temp\\ipykernel_15612\\3936130889.py:8: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
+      "  M_heights = Men[Heights == 1]\n",
+      "C:\\Users\\JIMOH\\AppData\\Local\\Temp\\ipykernel_15612\\3936130889.py:9: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
+      "  M_weights = Men[Weights == 1]\n",
+      "C:\\Users\\JIMOH\\AppData\\Local\\Temp\\ipykernel_15612\\3936130889.py:10: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
+      "  W_heights = Women[Heights == 1]\n",
+      "C:\\Users\\JIMOH\\AppData\\Local\\Temp\\ipykernel_15612\\3936130889.py:11: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
+      "  W_weights = Women[Weights == 1]\n"
      ]
     },
     {
-     "ename": "ZeroDivisionError",
-     "evalue": "division by zero",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mZeroDivisionError\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[1;32mc:\\Users\\JIMOH\\Desktop\\DATA 3450\\Basic_Stats_in_Python_Student_Workbooks-1\\001_Basics.ipynb Cell 66\u001b[0m in \u001b[0;36m<cell line: 14>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/JIMOH/Desktop/DATA%203450/Basic_Stats_in_Python_Student_Workbooks-1/001_Basics.ipynb#Y144sZmlsZQ%3D%3D?line=9'>10</a>\u001b[0m women \u001b[39m=\u001b[39m Women[Heights \u001b[39m==\u001b[39m \u001b[39m1\u001b[39m]\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/JIMOH/Desktop/DATA%203450/Basic_Stats_in_Python_Student_Workbooks-1/001_Basics.ipynb#Y144sZmlsZQ%3D%3D?line=10'>11</a>\u001b[0m women2 \u001b[39m=\u001b[39m Women[Weights \u001b[39m==\u001b[39m \u001b[39m1\u001b[39m]\n\u001b[1;32m---> <a href='vscode-notebook-cell:/c%3A/Users/JIMOH/Desktop/DATA%203450/Basic_Stats_in_Python_Student_Workbooks-1/001_Basics.ipynb#Y144sZmlsZQ%3D%3D?line=13'>14</a>\u001b[0m M_heights \u001b[39m=\u001b[39m Men\u001b[39m.\u001b[39;49mshape[\u001b[39m0\u001b[39;49m]\u001b[39m/\u001b[39;49mmen\u001b[39m.\u001b[39;49mshape[\u001b[39m0\u001b[39;49m]\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/JIMOH/Desktop/DATA%203450/Basic_Stats_in_Python_Student_Workbooks-1/001_Basics.ipynb#Y144sZmlsZQ%3D%3D?line=14'>15</a>\u001b[0m W_heights \u001b[39m=\u001b[39m Women\u001b[39m.\u001b[39mshape[\u001b[39m0\u001b[39m]\u001b[39m/\u001b[39mwomen\u001b[39m.\u001b[39mshape[\u001b[39m0\u001b[39m]\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/JIMOH/Desktop/DATA%203450/Basic_Stats_in_Python_Student_Workbooks-1/001_Basics.ipynb#Y144sZmlsZQ%3D%3D?line=15'>16</a>\u001b[0m M_weights \u001b[39m=\u001b[39m Men\u001b[39m.\u001b[39mshape[\u001b[39m0\u001b[39m]\u001b[39m/\u001b[39mmen2\u001b[39m.\u001b[39mshape[\u001b[39m0\u001b[39m]\n",
-      "\u001b[1;31mZeroDivisionError\u001b[0m: division by zero"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Male Heights: Empty DataFrame\n",
+      "Columns: [Gender, Height, Weight, Index]\n",
+      "Index: []\n",
+      "Men Weights: Empty DataFrame\n",
+      "Columns: [Gender, Height, Weight, Index]\n",
+      "Index: []\n",
+      "Female Heights: Empty DataFrame\n",
+      "Columns: [Gender, Height, Weight, Index]\n",
+      "Index: []\n",
+      "Women Weights: Empty DataFrame\n",
+      "Columns: [Gender, Height, Weight, Index]\n",
+      "Index: []\n"
      ]
     }
    ],
@@ -2936,18 +2943,12 @@
     "Gender = df2[\"Gender\"]\n",
     "\n",
     "Men = df2[Gender == \"male\"]\n",
-    "Women =df2[Gender == \"Female\"]\n",
+    "Women = df2[Gender == \"Female\"]\n",
     "\n",
-    "men = Men[Heights == 1]\n",
-    "men2 = Men[Weights == 1]\n",
-    "women = Women[Heights == 1]\n",
-    "women2 = Women[Weights == 1]\n",
-    "\n",
-    "\n",
-    "M_heights = Men.shape[0]/men.shape[0]\n",
-    "W_heights = Women.shape[0]/women.shape[0]\n",
-    "M_weights = Men.shape[0]/men2.shape[0]\n",
-    "W_weights = Women.shape[0]/women2.shape[0]\n",
+    "M_heights = Men[Heights == 1]\n",
+    "M_weights = Men[Weights == 1]\n",
+    "W_heights = Women[Heights == 1]\n",
+    "W_weights = Women[Weights == 1]\n",
     "\n",
     "print(\"Male Heights:\", M_heights)\n",
     "print(\"Men Weights:\", M_weights)\n",
